test(jackson): add unit tests for polymorphic and list